fix: z-index

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  z-index:100;
 }
 
 .the-brave-coders__popup {
